--- a/gb/24/5/8/n14244055.md
+++ b/gb/24/5/8/n14244055.md
@@ -1,7 +1,7 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>欧冠：最后时刻连入两球 王马逆转拜仁闯入决赛</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>欧冠：最后时刻连入两球 王马胜拜仁进决赛</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/05/id14244056-GettyImages-2152094640-600x400.jpg" />
 <h6>2024年5月8日的欧冠比赛中，王家马德里凭借何塞卢的两粒进球，最后时刻逆转击败拜仁慕尼黑。图为何塞卢庆祝第二粒进球。(David Ramos/Getty Images)
 </h6>
@@ -12,50 +12,51 @@
 <p>开场后，两队都踢得比较保守。客场作战的拜仁以防守为主，攻守转换中，利用凯恩在中路的调度能力，向两侧的边锋输送炮弹，试图通过快速反击制造威胁。王马虽然控球上占据主动，但并没有在进攻中冒进。</p>
 <p>第13分钟，场内同时出现两个皮球，但主裁判没有吹停比赛。王马边锋维尼修斯在小禁区左侧接到传球后起脚低射，皮球击中门柱弹出，罗德里戈补射被拜仁门将诺伊尔扑出。</p>
 <p>第28分钟，王马后卫纳乔禁区内解围见高不见远，凯恩在大禁区线附近半转身凌空抽射，王马门将卢宁倒地奋力将球扑出底线。</p>
-<figure id="attachment_14244058" aria-describedby="caption-attachment-14244058" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14244058-GettyImages-2152085566.jpg"><img class="size-large wp-image-14244058" src="https://i.epochtimes.com/assets/uploads/2024/05/id14244058-GettyImages-2152085566-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14244058" class="wp-caption-text">2024年5月8日，随着拜仁在欧冠遭王马淘汰，为了冠军而加盟拜仁的凯恩已注定本赛季一无所获。图为凯恩（左）在比赛中射门瞬间。(Clive Brunskill/Getty Images)</figcaption></figure>
+<figure id="attachment_14244058" aria-describedby="caption-attachment-14244058" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14244058-GettyImages-2152085566.jpg"><img decoding="async" class="size-large wp-image-14244058" src="https://i.epochtimes.com/assets/uploads/2024/05/id14244058-GettyImages-2152085566-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14244058" class="wp-caption-text">2024年5月8日，随着拜仁在欧冠遭王马淘汰，为了冠军而加盟拜仁的凯恩已注定本赛季一无所获。图为凯恩（左）在比赛中射门瞬间。(Clive Brunskill/Getty Images)</figcaption></figure>
 <p>经过半场的试探，下半场王马加大进攻力度，阵型前压的同时，利用维尼修斯的个人能力主攻拜仁右路。维尼修斯连续三次突破拜仁后卫基米希的防守，完成倒三角传中，好在拜仁中路防守严密，王马没能获得射门机会。</p>
 <p>第55分钟，维尼修斯再次左路突破至禁区，随后横传中路，罗德里戈的射门稍稍偏出。第60分钟，维尼修斯突入禁区后自己起脚射门，诺伊尔单掌将球扑出。</p>
 <p>拜仁在稳固防守的同时，也在寻觅反击的机会。第68分钟，拜仁由守转攻，凯恩精准的长传找到了左路的戴维斯。戴维斯带球进入禁区，内切躲开吕迪格的防守，起脚抽射，皮球直入死角，拜仁打破场上僵局。</p>
-<figure id="attachment_14244059" aria-describedby="caption-attachment-14244059" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14244059-GettyImages-2152089228.jpg"><img class="size-large wp-image-14244059" src="https://i.epochtimes.com/assets/uploads/2024/05/id14244059-GettyImages-2152089228-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14244059" class="wp-caption-text">2024年5月8日，在与王马欧冠比赛中，戴维斯的进球几乎为拜仁带来胜利。图为戴维斯（右二）射门瞬间。(Alexander Hassenstein/Getty Images)</figcaption></figure>
+<figure id="attachment_14244059" aria-describedby="caption-attachment-14244059" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14244059-GettyImages-2152089228.jpg"><img decoding="async" class="size-large wp-image-14244059" src="https://i.epochtimes.com/assets/uploads/2024/05/id14244059-GettyImages-2152089228-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14244059" class="wp-caption-text">2024年5月8日，在与王马欧冠比赛中，戴维斯的进球几乎为拜仁带来胜利。图为戴维斯（右二）射门瞬间。(Alexander Hassenstein/Getty Images)</figcaption></figure>
 <p>一球领先的拜仁更加坚定了死守的决心，第75分钟，中后卫金玟哉替换萨内出场。最后十分钟，拜仁摆出6名后卫，力图守住1:0的比分。</p>
 <p>面对拜仁坚固的防守，王马也一筹莫展。直到第88分钟，比赛出现转机：维尼修斯禁区外远射，虽然射门威胁不大，但整场表现出色的拜仁门将诺伊尔出现失误，扑球脱手，替补出场的王马前锋何塞卢补射得分，比分来到1:1。</p>
 <p>进球后的王马士气大振，而眼看到手的胜利溜走，拜仁球员显然心态发生变化，严密的防守出现松动。第90分钟，吕迪格禁区内横传门前，何塞卢门前抢点再下一城，两分钟内，王马完成逆转。</p>
 <p>此时已将主力进攻手凯恩和穆西亚拉换下的拜仁，无力再组织有效的进攻。虽然伤停补时最后时刻，德里赫特打入一球，但主裁判判罚拜仁球员越位在先，进球无效。</p>
 <p>最终，王马主场2:1逆转战胜拜仁，两回合总比分4:3将其淘汰。6月1日，王马将在伦敦温布利球场与多特蒙德队争夺本赛季欧冠冠军。</p>
-<figure id="attachment_14244060" aria-describedby="caption-attachment-14244060" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14244060-GettyImages-2151528154.jpg"><img class="size-large wp-image-14244060" src="https://i.epochtimes.com/assets/uploads/2024/05/id14244060-GettyImages-2151528154-600x396.jpg" alt="" width="600" b="396" /></a><figcaption id="caption-attachment-14244060" class="wp-caption-text">2024年5月8日，在欧冠比赛中淘汰拜仁后，王马11年内第6次闯入欧冠决赛，主教练安切洛蒂也创纪录地第6次带队进入欧冠决赛。图为赛后安切洛蒂和王马球员庆祝胜利。(Oscar Del Pozo/AFP via Getty Images)</figcaption></figure>
-<p>拜仁出场阵容：1-诺伊尔、6-基米希、15-戴尔、4-德里赫特、40-马兹拉维、27-莱默尔、45-帕夫洛维奇、10-萨内（75&#8242;-3-金玟哉）、7-格纳布里（27&#8242; 19-阿方索·戴维斯）、42-穆西亚拉（84’-25-穆勒）、9-凯恩（85’-13-舒波·莫廷）</p>
-<p>王马出场阵容：13-卢宁、2-卡瓦哈尔、22-吕迪格、6-纳乔、23-费兰·门迪、18-楚阿梅尼（70&#8242; 12-卡马文加）、15-巴尔韦德（81&#8242; 21-迪亚斯）、8-克罗斯（69&#8242; 10-莫德里奇）、5-贝林厄姆（90&#8242; 3-米利唐）、11-罗德里戈（81&#8242; 14-何塞卢）、7-维尼修斯</p>
-<p>责任编辑：吴灏</p>
+<figure id="attachment_14244060" aria-describedby="caption-attachment-14244060" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14244060-GettyImages-2151528154.jpg"><img decoding="async" class="size-large wp-image-14244060" src="https://i.epochtimes.com/assets/uploads/2024/05/id14244060-GettyImages-2151528154-600x396.jpg" alt="" width="600" b="396" /></a><figcaption id="caption-attachment-14244060" class="wp-caption-text">2024年5月8日，在欧冠比赛中淘汰拜仁后，王马11年内第6次闯入欧冠决赛，主教练安切洛蒂也创纪录地第6次带队进入欧冠决赛。图为赛后安切洛蒂和王马球员庆祝胜利。(Oscar Del Pozo/AFP via Getty Images)</figcaption></figure>
+<p>拜仁出场阵容：1-诺伊尔、6-基米希、15-戴尔、4-德里赫特、40-马兹拉维、27-莱默尔、45-帕夫洛维奇、10-萨内（75&#8242; 3-金玟哉）、7-格纳布里（27&#8242; 19-阿方索·戴维斯）、42-穆西亚拉（84&#8242; 25-穆勒）、9-凯恩（85&#8242; 13-舒波·莫廷）</p>
+<p>王马出场阵容：13-卢宁、2-卡瓦哈尔、22-吕迪格、6-纳乔、23-费兰?门迪、18-楚阿梅尼（70&#8242; 12-卡马文加）、15-巴尔韦德（81&#8242; 21-迪亚斯）、8-克罗斯（69&#8242; 10-莫德里奇）、5-贝林厄姆（90&#8242; 3-米利唐）、11-罗德里戈（81&#8242; 14-何塞卢）、7-维尼修斯</p>
+<p>责任编辑：吴灏#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/18/n14228872.md#1">欧冠欧联八强战 英超4队全军覆没</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/30/n14238004.md#1">欧冠：王马艰难战平拜仁 维尼修斯两球救主</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/1/n14238705.md#1">欧冠半决赛首回合：多特蒙德1:0小胜巴黎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/7/n14243290.md#1">欧冠：巴黎四中门框难进一球 多特晋级决赛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/18/n14228872.md#1">欧冠欧联八强战 英超4队全军覆没</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/30/n14238004.md#1">欧冠：王马艰难战平拜仁 维尼修斯两球救主</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/1/n14238705.md#1">欧冠半决赛首回合：多特蒙德1:0小胜巴黎</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/7/n14243290.md#1">欧冠：巴黎四中门框难进一球 多特晋级决赛</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/1/n10014980.md#1" target="_blank">林辉：文革荒诞事 误损毛像引出大祸端</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/10/2/n9691133.md#1" target="_blank">从上海到巴黎 前国企高管的坚守之路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/4/n9922246.md#1" target="_blank">林辉：文革冤案中周恩来的落井下石与冷酷</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/11/n7544340.md#1" target="_blank">大陆律师在法庭上揭穿“天安门自焚”伪案</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/30/n14237654.md#1">一场超级大地震  为何被神秘的力量推迟了三年？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/4/n14240423.md#1">立夏节气民俗 补夏养生和立夏禁忌一次看</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/7/n10958214.md#1">文艺复兴时期最伟大的肖像画家之一：小汉斯?霍尔班（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/2/n14239524.md#1">【未解之谜】帕斯卡古拉外星人绑架案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/1/n14238078.md#1">【古道人生】战乱中一对生离死别的夫妻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/8/n14243348.md#1">【菁英论坛】乌克兰战争 各国划时代选边站</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/6/n14241605.md#1">【未解之谜】时空旅人惊人预言：9.8级地震正在路上？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/7/n14242865.md#1">【全球新闻】以色列攻入拉法 清剿哈马斯营地</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/5/n14241546.md#1">河南事业编制大裁员 分析：中共真没钱了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/3/n14240154.md#1">卖最快的新车品牌 丰田居首 顶级豪车第二</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/6/n14242491.md#1">重返《卧虎藏龙》取景地 章子怡晒素颜照获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/6/n14242364.md#1">杨幂新片《火锅》票房惨淡 上映5天宣布撤档</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/7/n14243021.md#1">《哥吉拉与金刚》票房超越首部 5月中线上发行</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/6/n14242053.md#1">《星际异攻队3》满周年 导演冈恩想念剧组想到心痛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/7/n14243275.md#1">谈“武侠影后”郑佩佩近况 刘涛一度哽咽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/6/n14241994.md#1">这种水果具有去污除臭的奇效 专家推荐使用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/6/n14241556.md#1">小苏打代替洗洁精去污除臭 居家清洁3大妙用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/7/n14242815.md#1">旧报纸的两个妙用 你可能不知道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/7/n14242889.md#1">如何延长草莓的存放时间？ 专家教你几招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/29/n14237086.md#1">奇异果补肾养肝 1种古老吃法能化结石</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306146.md#1">老花 近视 飞蚊症 干眼症 中医7招应对眼疾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306766.md#1">【全球新闻】乌克兰跨境攻入俄罗斯 数千人撤离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306935.md#1">【新闻欣视角】新冠病毒警报再响 两变异株来势汹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/5/8/n14244055.htm">欧冠：最后时刻连入两球 王马逆转拜仁闯入决赛</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/19920513/djy/blob/master/gb/24/5/8/n14244055.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/5/8/n14244055.htm">欧冠：最后时刻连入两球 王马胜拜仁进决赛</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/5/8/n14244055.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
